[package]
name = "blc"
version = "0.1.0"
edition = "2021"


[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 'z'
panic = 'abort'


[dependencies]
clap = { version = "4.5.18", features = ["derive"] }

reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"

config = "0.14.0"

colored = "2"

chrono = "0.4.38"
binrw = "0.14.0"
